// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GroupsListItem > should match snapshot logged 1`] = `
"<div class=\\"groups-list-container\\">
  <div class=\\"groups-list-wrapper\\">
    <div class=\\"groups-list-header\\">
      <div class=\\"el-input el-input-group el-input-group--prepend group-name-filter tf-outer w-auto\\">
        <!-- input -->
        <!-- prepend slot -->
        <div class=\\"el-input-group__prepend\\">
          <div class=\\"mock-el-icon -mx-1\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
              <path fill=\\"currentColor\\" d=\\"m795.904 750.72 124.992 124.928a32 32 0 0 1-45.248 45.248L750.656 795.904a416 416 0 1 1 45.248-45.248zM480 832a352 352 0 1 0 0-704 352 352 0 0 0 0 704z\\"></path>
            </svg></div>
        </div>
        <div class=\\"el-input__wrapper\\" tabindex=\\"-1\\">
          <!-- prefix slot -->
          <!--v-if--><input class=\\"el-input__inner\\" type=\\"text\\" autocomplete=\\"off\\" tabindex=\\"0\\" placeholder=\\"Enter keywords\\" id=\\"el-id-replaced\\"><!-- suffix slot -->
          <!--v-if-->
        </div><!-- append slot -->
        <!--v-if-->
      </div><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary el-button--large group-list-create-btn\\">
        <!--v-if--><span class=\\"\\">Create group</span>
      </button>
    </div>
    <div class=\\"groups-list-content\\">
      <!---->
      <div class=\\"group-item\\">
        <div class=\\"group-item-info\\">
          <div class=\\"group-item-title-wrapper group-item-info-line\\">
            <div data-test-key=\\"group-link\\" class=\\"group-item-title\\">group1<span class=\\"group-item-short-name\\"> (g1)</span></div>
            <div data-v-0bc4b279=\\"\\" class=\\"mock-el-popover ml-1\\" trigger=\\"hover\\" placement=\\"top\\" popper-class=\\"min-w-0\\">
              <p data-v-0bc4b279=\\"\\" class=\\"leading-none m-0\\">Copy group id to clipboard</p>
            </div>
          </div>
          <div class=\\"group-item-info-line\\">
            <!----> 2 Members
          </div>
        </div>
        <div class=\\"group-item-actions\\">
          <div class=\\"flex items-center\\">
            <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M96 896a32 32 0 0 1-32-32V160a32 32 0 0 1 32-32h832a32 32 0 0 1 32 32v704a32 32 0 0 1-32 32H96zm315.52-228.48-68.928-68.928a32 32 0 0 0-45.248 0L128 768.064h778.688l-242.112-290.56a32 32 0 0 0-49.216 0L458.752 665.408a32 32 0 0 1-47.232 2.112zM256 384a96 96 0 1 0 192.064-.064A96 96 0 0 0 256 384z\\"></path>
              </svg></div>
            <div class=\\"link ml-1\\" data-test-key=\\"dataset-link\\">Browse datasets</div>
          </div>
          <div class=\\"flex items-center\\">
            <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"m199.04 672.64 193.984 112 224-387.968-193.92-112-224 388.032zm-23.872 60.16 32.896 148.288 144.896-45.696L175.168 732.8zM455.04 229.248l193.92 112 56.704-98.112-193.984-112-56.64 98.112zM104.32 708.8l384-665.024 304.768 175.936L409.152 884.8h.064l-248.448 78.336L104.32 708.8zm384 254.272v-64h448v64h-448z\\"></path>
              </svg></div>
            <div class=\\"link ml-1\\" data-test-key=\\"manage-link\\">Manage group</div>
          </div>
        </div>
      </div>
      <div class=\\"group-item\\">
        <div class=\\"group-item-info\\">
          <div class=\\"group-item-title-wrapper group-item-info-line\\">
            <div data-test-key=\\"group-link\\" class=\\"group-item-title\\">group2<span class=\\"group-item-short-name\\"> (g2)</span></div>
            <div data-v-0bc4b279=\\"\\" class=\\"mock-el-popover ml-1\\" trigger=\\"hover\\" placement=\\"top\\" popper-class=\\"min-w-0\\">
              <p data-v-0bc4b279=\\"\\" class=\\"leading-none m-0\\">Copy group id to clipboard</p>
            </div>
          </div>
          <div class=\\"group-item-info-line\\">
            <!----> 1 Member
          </div>
        </div>
        <div class=\\"group-item-actions\\">
          <div class=\\"flex items-center\\">
            <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M96 896a32 32 0 0 1-32-32V160a32 32 0 0 1 32-32h832a32 32 0 0 1 32 32v704a32 32 0 0 1-32 32H96zm315.52-228.48-68.928-68.928a32 32 0 0 0-45.248 0L128 768.064h778.688l-242.112-290.56a32 32 0 0 0-49.216 0L458.752 665.408a32 32 0 0 1-47.232 2.112zM256 384a96 96 0 1 0 192.064-.064A96 96 0 0 0 256 384z\\"></path>
              </svg></div>
            <div class=\\"link ml-1\\" data-test-key=\\"dataset-link\\">Browse datasets</div>
          </div>
          <div class=\\"flex items-center\\">
            <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"m199.04 672.64 193.984 112 224-387.968-193.92-112-224 388.032zm-23.872 60.16 32.896 148.288 144.896-45.696L175.168 732.8zM455.04 229.248l193.92 112 56.704-98.112-193.984-112-56.64 98.112zM104.32 708.8l384-665.024 304.768 175.936L409.152 884.8h.064l-248.448 78.336L104.32 708.8zm384 254.272v-64h448v64h-448z\\"></path>
              </svg></div>
            <div class=\\"link ml-1\\" data-test-key=\\"manage-link\\">Browse group</div>
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
</div>"
`;

exports[`GroupsListItem > should match snapshot no data 1`] = `
"<div class=\\"groups-list-container\\">
  <div class=\\"groups-list-wrapper\\">
    <div class=\\"groups-list-header\\">
      <div class=\\"el-input el-input-group el-input-group--prepend group-name-filter tf-outer w-auto\\">
        <!-- input -->
        <!-- prepend slot -->
        <div class=\\"el-input-group__prepend\\">
          <div class=\\"mock-el-icon -mx-1\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
              <path fill=\\"currentColor\\" d=\\"m795.904 750.72 124.992 124.928a32 32 0 0 1-45.248 45.248L750.656 795.904a416 416 0 1 1 45.248-45.248zM480 832a352 352 0 1 0 0-704 352 352 0 0 0 0 704z\\"></path>
            </svg></div>
        </div>
        <div class=\\"el-input__wrapper\\" tabindex=\\"-1\\">
          <!-- prefix slot -->
          <!--v-if--><input class=\\"el-input__inner\\" type=\\"text\\" autocomplete=\\"off\\" tabindex=\\"0\\" placeholder=\\"Enter keywords\\" id=\\"el-id-replaced\\"><!-- suffix slot -->
          <!--v-if-->
        </div><!-- append slot -->
        <!--v-if-->
      </div><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary el-button--large group-list-create-btn\\">
        <!--v-if--><span class=\\"\\">Create group</span>
      </button>
    </div>
    <div class=\\"groups-list-content\\">
      <p>Group not found!</p>
      <!---->
      <!---->
    </div>
  </div>
</div>"
`;

exports[`GroupsListItem > should match snapshot not logged 1`] = `
"<div class=\\"groups-list-container\\">
  <div class=\\"groups-list-wrapper\\">
    <p class=\\"font-normal text-center\\">Create an account/login, to create groups and make your work reach more people!</p>
  </div>
</div>"
`;
